--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,10 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- これがないとonDeviceReadyが起動しない -->
   <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 </head>
-<!-- <body onload="onLoad()">
-  <script>
-    function onLoad() {
-      document.addEventListener("deviceready",onDeviceReady,false);
-    }
-    function onDeviceReady() {
-      console.log("deviceready");
-      alert((navigator as any).camera);
-      alert("index.html");
-    }
-  </script> -->
+<body>
   <app-root></app-root>
 </body>
 </html>
