modfied except iPhoneX

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" onsflag-iphonex-portrait="true">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Prescription</title>
