ローカル通知がなんとか上手く動いた

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,15 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script>
+    window.onload = function(){
+      cordova.plugins.notification.local.schedule({
+        title: '通知テスト',
+        text: 'ローカル通知のテストです',
+        foreground: true
+      });
+    }
+  </script>
 </body>
 </html>
