--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,42 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- これがないとonDeviceReadyが起動しない -->
-  <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+  <script>
+    (function (w) {
+      var loadJS = function (src, cb, ordered) {
+        "use strict";
+        var tmp;
+        var ref = w.document.getElementsByTagName("script")[0];
+        var script = w.document.createElement("script");
+
+        if (typeof (cb) === 'boolean') {
+          tmp = ordered;
+          ordered = cb;
+          cb = tmp;
+        }
+
+        script.src = src;
+        script.async = !ordered;
+        ref.parentNode.insertBefore(script, ref);
+
+        if (cb && typeof (cb) === "function") {
+          script.onload = cb;
+        }
+        return script;
+      };
+      // commonjs
+      if (typeof module !== "undefined") {
+        module.exports = loadJS;
+      }
+      else {
+        w.loadJS = loadJS;
+      }
+    }(typeof global !== "undefined" ? global : this));
+    console.log(navigator.userAgent);
+    if (!/Chrome/.test(navigator.userAgent)) {
+      loadJS('cordova.js');
+    }
+  </script>
 </head>
 <body>
   <app-root></app-root>
